gitops/manifests/trala/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trala
  namespace: traefik
  labels:
    app: trala
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trala
  template:
    metadata:
      labels:
        app: trala
        app.kubernetes.io/name: trala
    spec:
      containers:
        - name: trala
          image: ghcr.io/dannybouwers/trala:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /config/icon_overrides.yml
              subPath: icon_overrides.yml
              readOnly: true
            - name: config
              mountPath: /config/services.yml
              subPath: services.yml
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
      volumes:
        - name: config
          configMap:
            name: trala-config
---
apiVersion: v1
kind: Service
metadata:
  name: trala
  namespace: traefik
  labels:
    app: trala
spec:
  selector:
    app: trala
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trala-internal
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trala.local.timmybtech.com`)
      kind: Rule
      services:
        - name: trala
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
